# GiganticEmu

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Directory.Build.props  GiganticEmu.csproj  GiganticEmu.sln  GitVersion.yml  LICENSE  README.md  appsettings.json  dist.ps1  tye.yaml
.github/workflows/: build.yaml  docker.yaml  release.yaml
ArcSDK/: .gitignore  CMakeLists.txt  version.rc.in
ArcSDK/src/: DllMain.cpp
GiganticEmu.Agent/: AgentConfiguration.cs  ChildProcessTracker.cs  GiganticEmu.Agent.csproj  LogManager.cs  Program.cs  RequireApiKeyAttribute.cs  ServerManager.cs  Startup.cs
GiganticEmu.Agent/Controllers/: ApiController.cs  LegacyApiController.cs
GiganticEmu.Agent/Pages/: Error.cshtml  Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  _ViewImports.cshtml
GiganticEmu.Agent/Properties/: launchSettings.json
GiganticEmu.Launcher/: App.xaml  App.xaml.cs  AuthHeaderHandler.cs  GiganticEmu.Launcher.csproj  IApi.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs
GiganticEmu.Launcher/App/: App.xaml  App.xaml.cs  AppViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  SetupGame.xaml  SetupGame.xaml.cs  SetupGameViewModel.cs
GiganticEmu.Launcher/Common/: AutoUpdater.cs  CredentialStorage.cs  FileHashes.cs  GameLauncher.cs  GitHub.cs  LauncherConfiguration.cs  Lnk.cs  Prompt.xaml  Prompt.xaml.cs  ReactiveMaterialWindow.cs  Settings.cs  SmoothScrollViewer.cs  UserData.cs  (+1 more)
GiganticEmu.Mice/: Dockerfile  GiganticEmu.Mice.csproj  MatchmakingService.cs  MiceBuilderExtensions.cs  MiceClient.cs  MiceCommandAttribute.cs  MiceCommandHandler.cs  MiceOptions.cs  MiceServer.cs  Program.cs  Salsa.cs
GiganticEmu.ModdingToolkit/: App.axaml  App.axaml.cs  AsyncEvent.cs  BoyerMoore.cs  GiganticEmu.ModdingToolkit.csproj  JsonPolymorphicConverter.cs  MainWindow.axaml  MainWindow.axaml.cs  ModLoader.cs  ModUtils.cs  Program.cs  app.manifest
GiganticEmu.Shared/: ApiTokenHandler.cs  Creature.cs  Creatures.cs  GameUtils.cs  GiganticEmu.Shared.csproj  Guardian.cs  HttpExtensions.cs  IAgentApi.cs  IBackendApi.cs  ILegacyApi.cs  Map.cs  MatchResult.cs  PlatformUtils.cs  Player.cs  ProgressStream.cs  RequestResult.cs  ResponseBase.cs  SemVer.cs  Version.cs
GiganticEmu.Shared.Backend/: BackendConfiguration.cs  Crypt.cs  GiganticEmu.Shared.Backend.csproj  GiganticEmuConfiguration.cs
GiganticEmu.Skill/: GiganticEmu.Skill.csproj  MatchMaking.cs  Participant.cs  Rating.cs
GiganticEmu.Web/: Dockerfile  GiganticEmu.Web.csproj  Program.cs  RequireApiKeyAttribute.cs  Startup.cs
src/: DynamicJsonConverter.cs  MiceClient.cs  MiceServer.cs  Program.cs  WebServer.cs
(+262 files in other folders)
